# googleTest

./: .travis.yml
src/: CMakeLists.txt  main.cpp  substract.cpp  substract.h
test/: CMakeLists.txt  example_add.cpp  main.cpp  substract_testing.cpp
